Se mejoró la comunicacion entre componentes de la seccion de ingreso

--- a/src/app/componentes/dashboard/dashboard.component.html
+++ b/src/app/componentes/dashboard/dashboard.component.html
@@ -50,11 +50,8 @@
 
           </mat-expansion-panel-header>
           <div class="div-lista-datos">
-            <a routerLink="ingreso">Registrar Ingreso</a>
-            <a routerLink="ingreso/edit-ingreso">Editar Ingreso</a>
-            <a routerLink="ingreso/search-ingreso">Buscar Ingreso</a>
-            <a routerLink="ingreso/delete-ingreso">Eliminar Ingreso</a>
-            <a routerLink="ingreso/list-ingreso">Todos los Ingresos</a>
+            <a routerLink="ingreso">Gestionar Ingresos</a>
+            <a routerLink="ingreso/delete-ingreso">Ingresos Elimindados</a>
           </div>
         </mat-expansion-panel>
 
