--- a/src/app/componentes/data-dashboard/data-dashboard.component.html
+++ b/src/app/componentes/data-dashboard/data-dashboard.component.html
@@ -62,7 +62,7 @@
                 </tbody>
             </table>
             <div class="div-button" *ngIf="vendedores2">
-                <a routerLink="../vendedor/gestion-vendedor" class="btn btn-secondary btn-sm">Ver más</a>
+                <a routerLink="../vendedor" class="btn btn-secondary btn-sm">Ver más</a>
             </div>
         </div>
         <div class="container">
@@ -99,7 +99,7 @@
 
             </table>
             <div class="div-button" *ngIf="ingresos2">
-                <a routerLink="../ingreso/list-ingreso" class="btn btn-secondary btn-sm">Ver más</a>
+                <a routerLink="../ingreso" class="btn btn-secondary btn-sm">Ver más</a>
             </div>
         </div>
         <div class="container">
