--- a/src/app/componentes/usuarios/usuario-edit/usuario-edit.component.html
+++ b/src/app/componentes/usuarios/usuario-edit/usuario-edit.component.html
@@ -10,7 +10,7 @@
           <mat-label>Buscar Usuario</mat-label>
           <input matInput placeholder="Ingrese la cédula" [(ngModel)]="filtro" name="filtro">
         </mat-form-field>
-        <button class="btn btn-success agregarButton" title="Agregar Usuario" data-toggle="modal" data-target="#agregarUsuario" >
+        <button class="btn btn-success" title="Agregar Usuario" data-toggle="modal" data-target="#agregarUsuario" >
           <mat-icon >add_box</mat-icon>
          </button>
       </form>
