--- a/src/app/componentes/usuarios/usuario-regis/usuario-regis.component.html
+++ b/src/app/componentes/usuarios/usuario-regis/usuario-regis.component.html
@@ -65,7 +65,7 @@
       </mat-form-field>
     </div>
     <div class="div-footer">
-      <button type="button" class="btn btn-danger" data-dismiss="modal" #closemodal>Cancelar</button>
+      <button type="button" class="btn btn-danger" data-dismiss="modal" >Cancelar</button>
       <button type="submit" [disabled]="user.invalid" class="btn btn-secondary">Agregar Usuario</button>
     </div>
   </form>
