--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -1,46 +1,33 @@
 .div-contenedor{
   display: flex;
 }
-#gif{
-  margin: 0;
-  padding: 0;
-  width:  82px;
-  height: 73px;
-  display: none;
-}
-.gif{
-  margin: 0;
-  padding: 0;
-   display: flex;
-  justify-content: center;
- }
  
-.alert-danger{
- background-color: #DB0D0D;
- color: white;
- font-weight: bold;
- -webkit-box-shadow: -1px 2px 20px 0px rgba(0,0,0,0.39);
- -moz-box-shadow: -1px 2px 20px 0px rgba(0,0,0,0.39);
- box-shadow: -1px 2px 20px 0px rgba(0,0,0,0.39);
- border-radius: 10px;
- display: none;
- opacity: 0.8;
-}
 
 #iniciarSesion {
   color: #fff;
-  background-color: #00923F;
-  border-color: #00923F;
+  background-color: #212529;
+  border-color:#212529;
   -webkit-box-shadow: 7px 9px 20px -13px rgba(0,0,0,0.75);
   -moz-box-shadow: 7px 9px 20px -13px rgba(0,0,0,0.75);
-  box-shadow: 7px 9px 20px -13px rgba(0,0,0,0.75);
+  box-shadow: 7px 9px 20px -13px rgba(0,0,0,0.75);  
 }
 
+mat-icon{
+  color:#212529;
+}
+
+.icon-email{
+  margin-right:8px !important;
+}
 
 #btn-crearC:hover{
  color: #0a0a0a;
  text-decoration: underline;
  transition: 300ms all;
+}
+.btn-contraseña{
+  border: none !important;
+  background-color: white !important;
 }
 
 
@@ -77,7 +64,9 @@
   .validar{
     margin-bottom: 0 !important;
   }
-  
+  .mat-form-field{
+    width : 100% !important;
+  }
   
   .form-group a:Hover{
    /*color: #17A2B8; */
@@ -142,32 +131,14 @@
    .invalid {
     border: 1px solid #DB0D0D;
   }
-  .valid, input[type ="email"],input[type ="password"] {
+  .valid {
     border: 1px solid  #00923F;
   } 
-  input:focus {
-    box-shadow: none;
-    border: 1px solid #F8C300;   
-   
- }
-
- input:hover {
-  box-shadow: none;
-  border: 1px solid #F8C300;   
- 
-}
+  
 
 #containerMayor{
   position: relative;
  
-}
-#errorM{
-  position: absolute;
-  left: 35px;
-  top: 102px;
-  z-index: 0;
-  right: 35px;
-  font-size: small;
 }
 
 #title-Inicio{
