--- a/src/app/componentes/vendedores/vendedor-edit/vendedor-edit.component.html
+++ b/src/app/componentes/vendedores/vendedor-edit/vendedor-edit.component.html
@@ -11,7 +11,7 @@
           <mat-label>Buscar Vendedor</mat-label>
           <input matInput placeholder="Ingrese la cédula" [(ngModel)]="filtro" name="filtro">
         </mat-form-field>       
-        <button class="btn btn-success agregarButton" title="Agregar Vendedor" data-toggle="modal" data-target="#agregarVendedor" >
+        <button class="btn btn-success" title="Agregar Vendedor" data-toggle="modal" data-target="#agregarVendedor" >
           <mat-icon >add_box</mat-icon>
          </button>
       </form>
