--- a/src/app/componentes/vendedores/vendedor-registrer/vendedor-registrer.component.html
+++ b/src/app/componentes/vendedores/vendedor-registrer/vendedor-registrer.component.html
@@ -71,7 +71,7 @@
 
     </div>
     <div class="div-footer">
-      <button type="button" class="btn btn-danger" data-dismiss="modal" #closemodal>Cancelar</button>
+      <button type="button" class="btn btn-danger" data-dismiss="modal" >Cancelar</button>
       <button type="submit" class="btn btn-secondary" [disabled]="vendedor.invalid">Registrar Vendedor</button>
     </div>
   </form>
